--- a/index.html
+++ b/index.html
@@ -7,7 +7,19 @@
   <title>Morse Translator</title>
 </head>
 <body>
+  <div>
+    <input id="input" type="text">
+    <button id="translate">Translate</button>
+  </div>
 
+  <div id="output">
+    
+  </div>
+
+  <script type="module" src="./js-modules/breakDownEnglish.js"></script>
+  <script type="module" src="./js-modules/breakDownMorse.js"></script>
+  <script type="module" src="./js-modules/englishToMorse.js"></script>
+  <script type="module" src="./js-modules/morseToEnglish.js"></script>
   <script type="module" src="index.js"></script>
 </body>
 </html>
