--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
     <span class="titleCard__S" style="color:#4285F4">s</span>
     <span class="titleCard__E" style="color:#4FA854">e</span>
     <span class="titleCard__Translate">Translate</span>
+    <span class="titleCard__morse">-- --- .-. ... .  - .-. .- -. ... .-.. .- - .</span>
   </div>
+  
   <hr class="hr">
   <form class="textField">
     <div class="language">
